--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,76 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#1A1B22"
-    android:orientation="vertical"
-    android:padding="20dp">
-
+    android:background="@color/blue"
+    android:orientation="vertical">
+    
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="56dp">
+
+        <FrameLayout
+            android:layout_width="304dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="52dp"
+
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="6dp"
             android:layout_gravity="start"
-            android:text="Вопрос:"
-            android:textColor="#ffffff"
-            android:textSize="20sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:text="2/10"
-            android:textColor="#ffffff"
-            android:textSize="20sp" />
+            android:textSize="@dimen/primary_text_size"
+            android:text="@string/app_name"
+            android:textColor="@color/white"/>
 
     </FrameLayout>
-    
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="20dp"
-        android:layout_weight="1"
-        android:scaleType="centerCrop"
-        android:src="@drawable/poster" />
-    
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginHorizontal="63dp"
-        android:layout_marginTop="33dp"
-        android:gravity="center"
-        android:text="Рейтинг этого фильма больше, чем 9?"
-        android:textColor="#ffffff"
-        android:textSize="23sp"
-        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="33dp"
-        android:orientation="horizontal">
-        
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_marginEnd="10dp"
-            android:layout_weight="1"
-            android:backgroundTint="#ffffff"
-            android:text="Нет"
-            android:textColor="#1A1B22" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="24dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingBottom="28dp"
+        android:orientation="vertical">
 
         <Button
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_marginStart="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
+            android:layout_gravity="center"
             android:backgroundTint="#ffffff"
-            android:text="Да"
+            android:text="@string/search"
+            android:textSize="@dimen/primary_text_size"
+            app:cornerRadius="@dimen/corner_radius"
+            android:textColor="#1A1B22" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_marginTop="16dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:backgroundTint="#ffffff"
+            android:text="@string/mediateka"
+            android:textSize="@dimen/primary_text_size"
+            app:cornerRadius="@dimen/corner_radius"
+            android:textColor="#1A1B22" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_marginTop="16dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:backgroundTint="#ffffff"
+            android:text="@string/settings"
+            android:textSize="@dimen/primary_text_size"
+            app:cornerRadius="@dimen/corner_radius"
             android:textColor="#1A1B22" />
     </LinearLayout>
-
 </LinearLayout>
