--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="medium_padding">8dp</dimen>
     <dimen name="primary_text_size">22sp</dimen>
+    <dimen name="element_text_size">16sp</dimen>
     <dimen name="button_width">328dp</dimen>
     <dimen name="button_high">220dp</dimen>
     <dimen name="corner_radius">30dp</dimen>
