--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -33,13 +33,14 @@
             android:textColor="@color/black"/>
         <Button
             style="?android:attr/borderlessButtonStyle"
+            android:id="@+id/buttonSettingsBack"
             android:layout_width="45dp"
             android:layout_height="match_parent"
             android:layout_marginBottom="2dp"
             android:layout_marginTop="4dp"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="0dp"
-            android:backgroundTint="#ffffff"
+            android:backgroundTint="@color/white"
             android:layout_gravity="start"
             app:icon="@drawable/vector_arrow_back"
             app:iconTint="@color/black"
@@ -57,9 +58,9 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="63dp"
-            android:paddingLeft="16dp"
+            android:paddingLeft="@dimen/padding"
             android:paddingTop="21dp"
-            android:paddingRight="16dp">
+            android:paddingRight="@dimen/padding">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -81,9 +82,9 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="63dp"
-            android:paddingLeft="16dp"
+            android:paddingLeft="@dimen/padding"
             android:paddingTop="21dp"
-            android:paddingRight="16dp">
+            android:paddingRight="@dimen/padding">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -98,7 +99,7 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_gravity="end"
-                android:backgroundTint="#ffffff"
+                android:backgroundTint="@color/white"
                 app:icon="@drawable/share_light_mode"
                 app:iconGravity="textStart"
                 app:iconTint="@color/grey" />
@@ -108,9 +109,9 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="63dp"
-            android:paddingLeft="16dp"
+            android:paddingLeft="@dimen/padding"
             android:paddingTop="21dp"
-            android:paddingRight="16dp">
+            android:paddingRight="@dimen/padding">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -125,7 +126,7 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_gravity="end"
-                android:backgroundTint="#ffffff"
+                android:backgroundTint="@color/white"
                 app:icon="@drawable/light_mode_support"
                 app:iconGravity="textStart"
                 app:iconTint="@color/grey" />
@@ -135,9 +136,9 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="63dp"
-            android:paddingLeft="16dp"
+            android:paddingLeft="@dimen/padding"
             android:paddingTop="21dp"
-            android:paddingRight="16dp">
+            android:paddingRight="@dimen/padding">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -152,7 +153,7 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_gravity="end"
-                android:backgroundTint="#ffffff"
+                android:backgroundTint="@color/white"
                 app:icon="@drawable/vector_arrow_forward"
                 app:iconGravity="textStart"
                 app:iconTint="@color/grey" />
