--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="medium_padding">8dp</dimen>
+    <dimen name="padding">16dp</dimen>
     <dimen name="primary_text_size">22sp</dimen>
     <dimen name="element_text_size">16sp</dimen>
     <dimen name="button_width">328dp</dimen>
     <dimen name="button_high">220dp</dimen>
-    <dimen name="corner_radius">30dp</dimen>
+    <dimen name="corner_radius">16dp</dimen>
 
 </resources>
