All colors and Strings to dimens and strings

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,10 +37,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="24dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
+        android:paddingLeft="@dimen/padding"
+        android:paddingRight="@dimen/padding"
         android:paddingBottom="28dp"
-        android:orientation="vertical"      >
+        android:orientation="vertical">
 
         <Button
             android:id="@+id/buttonSearchMainActivity"
@@ -48,12 +48,12 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:foreground="?attr/selectableItemBackground"
-            android:backgroundTint="#ffffff"
+            android:backgroundTint="@color/white"
             app:cornerRadius="@dimen/corner_radius"
             android:layout_gravity="center"
             android:text="@string/search"
             android:textAllCaps="false"
-            android:textColor="#1A1B22"
+            android:textColor="@color/mainScreenButtonTextColor"
             android:textSize="@dimen/primary_text_size"
             app:icon="@drawable/vector_search"
             app:iconTint="@color/black"
@@ -65,12 +65,12 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:foreground="?attr/selectableItemBackground"
-            android:backgroundTint="#ffffff"
+            android:backgroundTint="@color/white"
             app:cornerRadius="@dimen/corner_radius"
             android:layout_gravity="center"
             android:text="@string/mediateka"
             android:textAllCaps="false"
-            android:textColor="#1A1B22"
+            android:textColor="@color/mainScreenButtonTextColor"
             android:textSize="@dimen/primary_text_size"
             app:icon="@drawable/vector_mediateka"
             app:iconTint="@color/black"
@@ -82,12 +82,12 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:foreground="?attr/selectableItemBackground"
-            android:backgroundTint="#ffffff"
+            android:backgroundTint="@color/white"
             app:cornerRadius="@dimen/corner_radius"
             android:layout_gravity="center"
             android:text="@string/settings"
             android:textAllCaps="false"
-            android:textColor="#1A1B22"
+            android:textColor="@color/mainScreenButtonTextColor"
             android:textSize="@dimen/primary_text_size"
             app:icon="@drawable/vector_settings"
             app:iconTint="@color/black"
