--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#3772E7</color>
     <color name="grey">#AEAFB4</color>
+    <color name="mainScreenButtonTextColor">#1A1B22</color>
 </resources>
