--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,8 +24,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="6dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="6dp"
             android:layout_gravity="start"
             android:textSize="@dimen/primary_text_size"
             android:text="@string/app_name"
