Styles collected. Night mode added.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/blue"
-    android:orientation="vertical">
+    style="@style/MainActivityLayoutStyle">
     
     <FrameLayout
         android:layout_width="match_parent"
@@ -18,16 +15,11 @@
             android:layout_marginStart="4dp"
             android:layout_marginEnd="52dp"/>
 
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <TextView style="@style/TitleTextStyle"
             android:layout_marginBottom="12dp"
             android:layout_marginTop="10dp"
             android:layout_marginStart="12dp"
             android:layout_marginEnd="6dp"
-            android:layout_gravity="start"
-            android:textSize="@dimen/primary_text_size"
             android:text="@string/app_name"
             android:textColor="@color/white"/>
 
@@ -42,55 +34,22 @@
         android:paddingBottom="28dp"
         android:orientation="vertical">
 
-        <Button
+        <Button style="@style/MainActivityButtonStyle"
             android:id="@+id/buttonSearchMainActivity"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:foreground="?attr/selectableItemBackground"
-            android:backgroundTint="@color/white"
-            app:cornerRadius="@dimen/corner_radius"
-            android:layout_gravity="center"
             android:text="@string/search"
-            android:textAllCaps="false"
-            android:textColor="@color/mainScreenButtonTextColor"
-            android:textSize="@dimen/primary_text_size"
             app:icon="@drawable/vector_search"
-            app:iconTint="@color/black"
             app:iconGravity="textStart"/>
 
-        <Button
-            android:id="@+id/buttonMediatekaMainActivity"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:foreground="?attr/selectableItemBackground"
-            android:backgroundTint="@color/white"
-            app:cornerRadius="@dimen/corner_radius"
-            android:layout_gravity="center"
+        <Button style="@style/MainActivityButtonStyle"
+            android:id="@+id/buttonMediaLibraryMainActivity"
             android:text="@string/mediateka"
-            android:textAllCaps="false"
-            android:textColor="@color/mainScreenButtonTextColor"
-            android:textSize="@dimen/primary_text_size"
             app:icon="@drawable/vector_mediateka"
-            app:iconTint="@color/black"
             app:iconGravity="textStart"/>
 
-        <Button
+        <Button style="@style/MainActivityButtonStyle"
             android:id="@+id/buttonSettingsMainActivity"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:foreground="?attr/selectableItemBackground"
-            android:backgroundTint="@color/white"
-            app:cornerRadius="@dimen/corner_radius"
-            android:layout_gravity="center"
             android:text="@string/settings"
-            android:textAllCaps="false"
-            android:textColor="@color/mainScreenButtonTextColor"
-            android:textSize="@dimen/primary_text_size"
             app:icon="@drawable/vector_settings"
-            app:iconTint="@color/black"
             app:iconGravity="textStart"/>
 
     </LinearLayout>
