--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#3772E7</color>
+    <color name="blue_light">#9FBBF3</color>
     <color name="grey">#AEAFB4</color>
+    <color name="grey_pale">#E6E8EB</color>
     <color name="mainScreenButtonTextColor">#1A1B22</color>
 </resources>
