--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,9 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".SearchActivity">
+    style="@style/InnerActivityLayoutStyle">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="56dp">
+
+        <FrameLayout style="@style/InnerActivityHeaderFrameLayout" />
+
+        <TextView style="@style/TitleTextStyle"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="52dp"
+            android:layout_marginRight="100dp"
+            android:text="@string/settings" />
+
+        <Button style="@style/SettingsActivityButtonBack"
+            android:id="@+id/buttonSettingsBack"
+            android:layout_gravity="start"
+            app:icon="@drawable/vector_arrow_back"
+            app:iconGravity="textStart"/>
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:orientation="vertical"
+        android:paddingTop="@dimen/medium_padding"
+        android:paddingBottom="@dimen/medium_padding"
+        android:paddingStart="@dimen/padding"
+        android:paddingEnd="@dimen/padding">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:hint="@string/search_hint"
+            android:maxLength="50"
+            android:maxLines="1"
+            android:inputType="textCapWords"
+            android:textColor="@color/black"
+            android:textColorHint="@color/grey"
+            android:textAlignment="textStart"/>
+
+
+    </FrameLayout>
+    </FrameLayout>
+
+    </LinearLayout>
