--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -17,7 +17,7 @@
         <item name="android:textFontWeight">500</item>
     </style>
 
-    <style name="SettingsActivityLayoutStyle">
+    <style name="InnerActivityLayoutStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:background">@color/black</item>
@@ -50,6 +50,12 @@
     </style>
 
     <style name="SettingsActivityButtonBack" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+        <item name="android:layout_width">48dp</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:layout_marginBottom">4dp</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginLeft">4dp</item>
+        <item name="android:layout_marginRight">0dp</item>
         <item name="android:backgroundTint">@color/black</item>
         <item name="iconTint">@color/white</item>
     </style>
