--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,11 +33,21 @@
         <item name="iconTint">@color/black</item>
     </style>
 
-    <style name="SettingsActivityLayoutStyle">
+    <style name="InnerActivityLayoutStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:background">@color/white</item>
         <item name="android:orientation">vertical</item>
+    </style>
+
+    <style name="InnerActivityHeaderFrameLayout">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">56dp</item>
+        <item name="android:layout_marginTop">4dp</item>
+        <item name="android:layout_marginBottom">4dp</item>
+        <item name="android:layout_marginStart">4dp</item>
+        <item name="android:layout_marginEnd">52dp</item>
+
     </style>
 
     <style name="SettingsActivityButtonFrame">
@@ -66,6 +76,12 @@
     </style>
 
     <style name="SettingsActivityButtonBack" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+        <item name="android:layout_width">48dp</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:layout_marginBottom">4dp</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginLeft">4dp</item>
+        <item name="android:layout_marginRight">0dp</item>
         <item name="android:backgroundTint">@color/white</item>
         <item name="iconTint">@color/black</item>
     </style>
