--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -84,6 +84,7 @@
         <item name="android:layout_marginRight">0dp</item>
         <item name="android:backgroundTint">@color/white</item>
         <item name="iconTint">@color/black</item>
+        <item name="android:foreground">?attr/selectableItemBackground</item>
     </style>
 
 </resources>
