HomeWork for Sprint 9

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -39,7 +39,7 @@
         <EditText
             android:id="@+id/editTextwather"
             android:layout_width="match_parent"
-            android:layout_height="32dp"
+            android:layout_height="36dp"
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
             android:hint="@string/search_hint"
@@ -56,11 +56,11 @@
             android:textAlignment="textStart"/>
         <ImageView
             android:id="@+id/clearIcon"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:src="@android:drawable/ic_menu_close_clear_cancel"
-            android:visibility="gone" />
+            android:src="@drawable/clear_button"
+            android:visibility="gone"/>
 
     </FrameLayout>
     </FrameLayout>
