--- a/app/src/main/res/layout-land/activity_search.xml
+++ b/app/src/main/res/layout-land/activity_search.xml
@@ -56,11 +56,11 @@
             android:textAlignment="textStart"/>
         <ImageView
             android:id="@+id/clearIcon"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:src="@android:drawable/ic_menu_close_clear_cancel"
-            android:visibility="gone" />
+            android:src="@drawable/clear_button"
+            android:visibility="gone"/>
 
     </FrameLayout>
     </FrameLayout>
