Save commit before sprint 10 HomeWork. Glide Added

--- a/app/src/main/res/layout-land/activity_search.xml
+++ b/app/src/main/res/layout-land/activity_search.xml
@@ -37,7 +37,7 @@
         android:paddingEnd="@dimen/padding">
 
         <EditText
-            android:id="@+id/editTextwather"
+            android:id="@+id/editTextwatcher"
             android:layout_width="match_parent"
             android:layout_height="32dp"
             android:paddingStart="12dp"
