--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -70,5 +70,6 @@
         android:id="@+id/recyclerSearch"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/padding"/>
+        android:layout_marginTop="@dimen/padding"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
     </LinearLayout>
