--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -10,59 +10,63 @@
 
         <FrameLayout style="@style/InnerActivityHeaderFrameLayout" />
 
-        <TextView style="@style/TitleTextStyle"
-            android:layout_marginTop="16dp"
+        <TextView
+            style="@style/TitleTextStyle"
             android:layout_marginLeft="52dp"
+            android:layout_marginTop="16dp"
             android:layout_marginRight="100dp"
             android:text="@string/search" />
 
-        <Button style="@style/SettingsActivityButtonBack"
+        <Button
             android:id="@+id/buttonSearchBack"
+            style="@style/SettingsActivityButtonBack"
             android:layout_gravity="start"
             app:icon="@drawable/vector_arrow_back"
-            app:iconGravity="textStart"/>
+            app:iconGravity="textStart" />
     </FrameLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="52dp"
         android:orientation="vertical">
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="52dp"
-        android:orientation="vertical"
-        android:paddingTop="@dimen/medium_padding"
-        android:paddingBottom="@dimen/medium_padding"
-        android:paddingStart="@dimen/padding"
-        android:paddingEnd="@dimen/padding">
 
-        <EditText
-            android:id="@+id/editTextwather"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:paddingStart="12dp"
-            android:paddingEnd="12dp"
-            android:hint="@string/search_hint"
-            android:textSize="@dimen/element_text_size"
-            android:fontFamily="@font/ys_display_regular"
-            android:drawableStart="@drawable/icon_search_small"
-            android:drawablePadding="@dimen/medium_padding"
-            android:background="@drawable/search_input"
-            android:maxLength="50"
-            android:maxLines="1"
-            android:inputType="textCapWords"
-            android:textColor="@color/black"
-            android:textColorHint="@color/grey"
-            android:textAlignment="textStart"/>
-        <ImageView
-            android:id="@+id/clearIcon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:src="@drawable/clear_button"
-            android:visibility="gone"/>
+            android:layout_height="52dp"
+            android:orientation="vertical"
+            android:paddingStart="@dimen/padding"
+            android:paddingTop="@dimen/medium_padding"
+            android:paddingEnd="@dimen/padding"
+            android:paddingBottom="@dimen/medium_padding">
 
-    </FrameLayout>
+            <EditText
+                android:id="@+id/editTextwather"
+                style="@style/SearchActivityTextInput"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:drawableStart="@drawable/icon_search_small"
+                android:drawablePadding="@dimen/medium_padding"
+                android:fontFamily="@font/ys_display_regular"
+                android:hint="@string/search_hint"
+                android:inputType="textCapWords"
+                android:maxLength="50"
+                android:maxLines="1"
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp"
+                android:textAlignment="textStart"
+                android:textColor="@color/black"
+                android:textColorHint="@color/grey"
+                android:textSize="@dimen/element_text_size" />
+
+            <ImageView
+                android:id="@+id/clearIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:src="@drawable/clear_button"
+                android:visibility="gone" />
+
+        </FrameLayout>
 
     </FrameLayout>
 
@@ -71,5 +75,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/padding"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
-    </LinearLayout>
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+</LinearLayout>
