--- a/app/src/main/res/layout/track_item.xml
+++ b/app/src/main/res/layout/track_item.xml
@@ -2,68 +2,74 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/SearchActivityTrackColor"
     android:layout_width="match_parent"
     android:layout_height="61dp"
     android:orientation="horizontal">
-    
+
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="250dp"
         android:layout_height="34dp"
         android:layout_marginStart="64dp"
-        android:layout_marginEnd="48dp"
         android:layout_marginTop="14dp"
-        android:layout_marginBottom="14dp">
+        android:layout_marginEnd="48dp"
+        android:layout_marginBottom="14dp"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:layout_gravity="top">
-        <TextView
-            android:id="@+id/trackName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_gravity="top"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/trackName"
+                style="@style/SearchActivityTrackSongText"/>
+
         </LinearLayout>
 
         <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="14dp"
-                android:layout_marginTop="0dp">
+            android:layout_width="match_parent"
+            android:layout_height="13dp"
+            android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/trackArtistName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                style="@style/SearchActivityTrackArtistText" />
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/track_dot"/>
+                android:layout_gravity="bottom"
+                android:src="@drawable/track_dot"
+                app:iconTint="@color/grey" />
+
             <TextView
                 android:id="@+id/trackLength"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                style="@style/SearchActivityTrackArtistText" />
         </LinearLayout>
 
     </LinearLayout>
 
     <ImageView
         android:id="@+id/trackCoverImage"
-        android:layout_marginTop="@dimen/medium_padding"
-        android:layout_marginBottom="@dimen/medium_padding"
-        android:layout_marginStart="14dp"
-        android:layout_marginEnd="302dp"
         android:layout_width="45dp"
-        android:layout_height="45dp"/>
+        android:layout_height="45dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="@dimen/medium_padding"
+        android:layout_marginEnd="302dp"
+        android:layout_marginBottom="@dimen/medium_padding"
+        app:cornerRadius="2dp" />
 
     <ImageView
-        android:layout_marginTop="18dp"
-        android:layout_marginBottom="19dp"
-        android:layout_marginStart="324dp"
-        android:layout_gravity="end"
-        android:layout_marginEnd="12dp"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:src="@drawable/track_arrow_forward"/>
+        android:layout_gravity="end"
+        android:layout_marginStart="324dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="19dp"
+        android:src="@drawable/track_arrow_forward"
+        app:iconTint="@color/grey" />
 
-        </androidx.cardview.widget.CardView>
+</androidx.cardview.widget.CardView>
