--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="MainActivityLayoutStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
@@ -58,6 +59,32 @@
         <item name="android:layout_marginRight">0dp</item>
         <item name="android:backgroundTint">@color/black</item>
         <item name="iconTint">@color/white</item>
+    </style>
+
+    <style name="SearchActivityTextInput">
+        <item name="android:background">@drawable/search_input</item>
+    </style>
+
+    <style name="SearchActivityTrackColor">
+        <item name="android:backgroundTint">@color/black</item>
+    </style>
+
+    <style name="SearchActivityTrackSongText">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">bottom</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="SearchActivityTrackArtistText">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">bottom</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
 </resources>
