--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -87,4 +87,30 @@
         <item name="android:foreground">?attr/selectableItemBackground</item>
     </style>
 
+    <style name="SearchActivityTextInput">
+        <item name="android:background">@drawable/search_input</item>
+    </style>
+
+    <style name="SearchActivityTrackColor">
+        <item name="android:backgroundTint">@color/white</item>
+    </style>
+
+    <style name="SearchActivityTrackSongText">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">bottom</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="SearchActivityTrackArtistText">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">bottom</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:textColor">@color/grey</item>
+    </style>
+
 </resources>
