--- a/app/src/main/res/layout/track_item.xml
+++ b/app/src/main/res/layout/track_item.xml
@@ -1,41 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/SearchActivityTrackColor"
     android:layout_width="match_parent"
-    android:layout_height="61dp"
+    android:layout_height="64dp"
     android:orientation="horizontal">
 
+    <ImageView
+        android:id="@+id/trackCoverImage"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp" />
+
     <LinearLayout
-        android:layout_width="250dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="14dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="12"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="48dp"
-        android:layout_marginBottom="14dp"
+        android:layout_marginBottom="16dp"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:layout_gravity="top"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/trackName"
-                style="@style/SearchActivityTrackSongText"/>
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/trackName"
+            style="@style/SearchActivityTrackSongText"
+            tools:text="item_text_text" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="13dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/trackArtistName"
-                style="@style/SearchActivityTrackArtistText" />
+                style="@style/SearchActivityTrackArtistText"
+                tools:text="item_text_text" />
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -46,30 +50,23 @@
 
             <TextView
                 android:id="@+id/trackLength"
-                style="@style/SearchActivityTrackArtistText" />
+                style="@style/SearchActivityTrackArtistText"
+                tools:text="item_text_text" />
         </LinearLayout>
-
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="2"
+        android:orientation="vertical">
     <ImageView
-        android:id="@+id/trackCoverImage"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="@dimen/medium_padding"
-        android:layout_marginEnd="302dp"
-        android:layout_marginBottom="@dimen/medium_padding"
-        app:cornerRadius="2dp" />
-
-    <ImageView
-        android:layout_width="24dp"
+        android:layout_width="wrap_content"
         android:layout_height="24dp"
-        android:layout_gravity="end"
-        android:layout_marginStart="324dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="19dp"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="start"
         android:src="@drawable/track_arrow_forward"
-        app:iconTint="@color/grey" />
+        app:iconTint="@color/grey"/>
+    </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+</LinearLayout>
