--- a/app/src/main/res/layout-land/activity_search.xml
+++ b/app/src/main/res/layout-land/activity_search.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/InnerActivityLayoutStyle">
+    style="@style/InnerActivityLayoutStyle"
+    android:id="@+id/searchActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -10,58 +11,153 @@
 
         <FrameLayout style="@style/InnerActivityHeaderFrameLayout" />
 
-        <TextView style="@style/TitleTextStyle"
-            android:layout_marginTop="16dp"
+        <TextView
+            style="@style/TitleTextStyle"
             android:layout_marginLeft="52dp"
+            android:layout_marginTop="16dp"
             android:layout_marginRight="100dp"
             android:text="@string/search" />
 
-        <Button style="@style/SettingsActivityButtonBack"
+        <Button
             android:id="@+id/buttonSearchBack"
+            style="@style/SettingsActivityButtonBack"
             android:layout_gravity="start"
             app:icon="@drawable/vector_arrow_back"
-            app:iconGravity="textStart"/>
+            app:iconGravity="textStart" />
     </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="52dp"
+            android:orientation="vertical"
+            android:paddingStart="@dimen/padding"
+            android:paddingTop="@dimen/medium_padding"
+            android:paddingEnd="@dimen/padding"
+            android:paddingBottom="@dimen/medium_padding">
+
+            <EditText
+                android:id="@+id/editTextwather"
+                style="@style/SearchActivityTextInput"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:drawableStart="@drawable/icon_search_small"
+                android:drawablePadding="@dimen/medium_padding"
+                android:fontFamily="@font/ys_display_regular"
+                android:hint="@string/search_hint"
+                android:imeOptions="actionDone"
+                android:inputType="textCapWords"
+                android:maxLength="50"
+                android:maxLines="1"
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp"
+                android:singleLine="true"
+                android:textAlignment="textStart"
+                android:textColor="@color/black"
+                android:textColorHint="@color/grey"
+                android:textSize="@dimen/element_text_size" />
+
+            <ImageView
+                android:id="@+id/clearIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:src="@drawable/clear_button"
+                android:visibility="gone" />
+
+        </FrameLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="52dp"
-        android:orientation="vertical"
-        android:paddingTop="@dimen/medium_padding"
-        android:paddingBottom="@dimen/medium_padding"
-        android:paddingStart="@dimen/padding"
-        android:paddingEnd="@dimen/padding">
+        android:layout_marginTop="@dimen/padding">
 
-        <EditText
-            android:id="@+id/editTextwatcher"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerSearch"
             android:layout_width="match_parent"
-            android:layout_height="32dp"
-            android:paddingStart="12dp"
-            android:paddingEnd="12dp"
-            android:hint="@string/search_hint"
-            android:textSize="@dimen/element_text_size"
-            android:fontFamily="@font/ys_display_regular"
-            android:drawableStart="@drawable/icon_search_small"
-            android:drawablePadding="@dimen/medium_padding"
-            android:background="@drawable/search_input"
-            android:maxLength="50"
-            android:maxLines="1"
-            android:inputType="textCapWords"
-            android:textColor="@color/black"
-            android:textColorHint="@color/grey"
-            android:textAlignment="textStart"/>
-        <ImageView
-            android:id="@+id/clearIcon"
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+
+        <LinearLayout
+            android:id="@+id/nothingFoundPlaceHolder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:src="@drawable/clear_button"
-            android:visibility="gone"/>
+            android:layout_gravity="center_horizontal"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/vector_nothing_found_light_mode" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/padding"
+                android:fontFamily="@font/ys_display_medium"
+                android:text="Ничего не нашлось"
+                android:textSize="19dp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/badConnectionPlaceHolder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/vector_connection_error_light_mode" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/padding"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:fontFamily="@font/ys_display_medium"
+                    android:text="Проблемы со связью."
+                    android:textSize="19dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="@dimen/medium_padding"
+                    android:fontFamily="@font/ys_display_medium"
+                    android:gravity="center"
+                    android:text="Загрузка не удалась. Проверьте подключение к интернету."
+                    android:textSize="19dp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <Button xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/refreshSearchButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="24dp"
+                android:backgroundTint="@color/black"
+                android:fontFamily="@font/ys_display_medium"
+                android:text="Обновить"
+                android:textAllCaps="false"
+                app:cornerRadius="16dp"
+                app:iconTint="@color/black" />
+
+        </LinearLayout>
 
     </FrameLayout>
-    </FrameLayout>
-    </LinearLayout>
+</LinearLayout>
