--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -96,17 +96,12 @@
     </style>
 
     <style name="SearchActivityTrackSongText">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_gravity">bottom</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="SearchActivityTrackArtistText">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">bottom</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textSize">11sp</item>
@@ -114,10 +109,9 @@
     </style>
 
     <style name="SearchActivityNothingFoundTextPH">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textSize">19sp</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="SearchActivityNothingFoundImagePH">
@@ -136,14 +130,10 @@
     </style>
 
     <style name="RefreshButtonStyle">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_gravity">center_horizontal</item>
-        <item name="android:layout_marginTop">24dp</item>
         <item name="android:backgroundTint">@color/black</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/white</item>
         <item name="cornerRadius">16dp</item>
         <item name="iconTint">@color/black</item>
     </style>
